manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
  annotations:
    keel.sh/policy: all        # Keel will update the deployment for all image versions (major, minor, patch)
    keel.sh/trigger: poll      # Keel will poll the Docker registry for updates
    keel.sh/docker.repo: 324483885455.dkr.ecr.eu-north-1.amazonaws.com/nginx-service # Define the ECR repository Keel should monitor
    keel.sh/docker.username: AWS # AWS ECR uses "AWS" as the username
spec:
 replicas: 1
 selector:
   matchLabels:
     app: nginx
 template:
   metadata:
     labels:
       app: nginx
   spec:
     serviceAccountName: keel-service-account  # The service account with attached IAM role for ECR access
     containers:
     - name: nginx
       image: .dkr.ecr.eu-north-1.amazonaws.com/nginx-service:1.0.0
       ports:
       - containerPort: 80
       volumeMounts:
       - name: nginx-config-volume
         mountPath: /usr/share/nginx/html
     volumes:
     - name: nginx-config-volume
       configMap:
         name: nginx-config
